erDiagram

    USERS {
        int COLUMN_ID "PK, AUTO"
        string COLUMN_UUID "UNIQUE, NOT NULL"
        string COLUMN_EMAIL "UNIQUE, NOT NULL"
        string COLUMN_PASSWORD
        string COLUMN_FIRST_NAME "NOT NULL"
        string COLUMN_LAST_NAME
        string COLUMN_ADDRESS
        int COLUMN_IS_GUEST "NOT NULL"
        int COLUMN_CREATED_AT "NOT NULL"
    }

    PRODUCTS {
        int COLUMN_ID "PK, AUTO"
        string COLUMN_UUID "UNIQUE, NOT NULL"
        string COLUMN_NAME "NOT NULL"
        string COLUMN_TYPE
        string COLUMN_GENDER
        string COLUMN_DESCRIPTION
        float COLUMN_PRICE "NOT NULL"
        int COLUMN_STOCK "NOT NULL"
        string COLUMN_IMAGES "NOT NULL"
        string COLUMN_TAGS "NOT NULL"
        int COLUMN_IS_VISIBLE_TO_GUEST "NOT NULL"
    }

    CART_ITEMS {
        int COLUMN_ID "PK, AUTO"
        string COLUMN_USER_UUID "NOT NULL"
        string COLUMN_PRODUCT_UUID "NOT NULL"
        int COLUMN_QUANTITY "NOT NULL"
        int COLUMN_ADDED_AT "NOT NULL"
    }

    FAVORITES {
        int COLUMN_ID "PK, AUTO"
        string COLUMN_USER_UUID "NOT NULL"
        string COLUMN_PRODUCT_UUID "NOT NULL"
        int COLUMN_CREATED_AT "NOT NULL"
    }

    USERS ||--o{ CART_ITEMS : "has"
    PRODUCTS ||--o{ CART_ITEMS : "has"
    USERS ||--o{ FAVORITES : "has"
    PRODUCTS ||--o{ FAVORITES : "has"